Service_chromadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: anything-llm-chromadb
  namespace: anything-llm
spec:
  clusterIP: 172.20.242.101
  clusterIPs:
  - 172.20.242.101
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: anything-llm
    app.kubernetes.io/name: chromadb
  sessionAffinity: None
  type: ClusterIP
