service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anything-llm
  namespace: anything-llm
spec:
  selector:
    app.kubernetes.io/name: anything-llm 
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
